<resources>
    <string name="openDrawer">Abrir Menú</string>
    <string name="closeDrawer">Cerrar Menú</string>
    <string name="app_name">NeoGestion</string>
    <string name="actualizado">Usuario actualizado</string>
    <string name="aceptar">Aceptar</string>
    <string name="creado">Usuario creado con exito</string>
    <string name="error">Error</string>
    <string name="rellena">Rellana los campos obligatorios</string>
    <string name="email_uso">Este correo ya esta en uso, utiliza otro</string>
    <string name="user_uso">Este usuario ya esta en uso, utiliza otro</string>
    <string name="tlf_uso">Este telefono ya esta en uso, utiliza otro</string>
    <string name="crear_user">Crear Usuario</string>
    <string name="editar_user">Editar Usuario</string>
    <string name="selecciona_fech">Selecciona una fecha</string>
    <string name="usuario_regular">Usuario regular</string>
    <string name="trabajador">Trabajador</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="que_hacer">¿Que quieres hacer?</string>
    <string name="lb_nombre_completo">Nombre Completo:</string>
    <string name="lb_fecha_nacimiento">Fecha De Nacimiento*:</string>
    <string name="lb_tipo_user">Tipo Usuario:</string>
    <string name="lb_correo">Correo:</string>
    <string name="lb_telf">Telefono:</string>
    <string name="user">Usuario*</string>
    <string name="email">Email*</string>
    <string name="pass">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrate">Registrate</string>
    <string name="tipo">Tipo*</string>
    <string name="correo">correo</string>
    <string name="telf">Telefono</string>
    <string name="safe_delete">¿Seguro que quieres eliminar?</string>
    <string name="nombre_apellidos">Nombre y Apellidos</string>
    <string name="fecha">Fecha De Nacimiento*</string>
    <string name="foto">Foto de perfil</string>
    <string name="delete_select">Eliminar usuarios seleccionados</string>
    <string name="incorrect">Usuario o contraseña incorrecta</string>
    <string name="error_user">Ningun usuario seleccionado</string>
    <string name="swt_baja">Dar de baja</string>
    <string name="lb_fecha_baja">Fecha de Baja:</string>
    <string name="title_not">Gestion de Usuarios</string>
    <string name="text_not">Usuario Creado con exito</string>
    <string name="text_not_edit">Usuario Editado con exito</string>
    <string name="baja">Dados de baja</string>
    <string name="activos">Activos</string>
    <string name="not_location">Permiso de ubicacion denegado</string>
    <string name="location_save">Ubicacion guardada</string>
    <string name="location_need">Permiso de ubicacion necesaria</string>
    <string name="buscar">Buscar...</string>
    <string name="empty_user">Usuario no encontrado</string>
    <string name="location_active">Ubicacion Activa</string>
    <string name="service">La aplicacion esta utilizando la ubicación</string>

</resources>