<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity"
    >

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        app:hintTextColor="@color/blue_600"
        app:boxStrokeColor="@color/blue_400"
       android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:hint="@string/tipo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <AutoCompleteTextView
            android:id="@+id/spinner_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

   </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtcrear_usu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/blue_600"
        app:boxStrokeColor="@color/blue_400"
        android:hint="@string/user"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtcrear_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextColor="@color/blue_600"
        app:boxStrokeColor="@color/blue_400"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/edtcrear_usu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtcrear_tlf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telf"
        app:hintTextColor="@color/blue_600"
        app:boxStrokeColor="@color/blue_400"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/edtcrear_correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtnombre_apellidos"
        android:layout_width="match_parent"
        app:hintTextColor="@color/blue_600"
        app:boxStrokeColor="@color/blue_400"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_apellidos"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@id/edtcrear_tlf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lb_fecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lb_fecha_nacimiento"
        android:layout_marginStart="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fecha"
        />

       <TextView
           android:id="@+id/fecha"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:hint="@string/fecha"
           android:layout_marginTop="30dp"
           android:layout_marginStart="20dp"
           android:layout_marginEnd="50dp"
           android:textSize="15dp"
           android:inputType="none"
           app:layout_constraintTop_toBottomOf="@id/edtnombre_apellidos"
           app:layout_constraintStart_toEndOf="@id/lb_fecha"
           app:layout_constraintEnd_toEndOf="parent"
           />


    <TextView
        android:id="@+id/lb_foto"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/foto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imagen_perfil" />


    <ImageView
        android:id="@+id/imagen_perfil"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:contentDescription="Volver"
        android:src="@drawable/person40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@id/lb_foto"
        app:layout_constraintTop_toBottomOf="@id/fecha" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swt_baja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swt_baja"
        android:textSize="15dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btcrea_rusuario"
        app:layout_constraintTop_toTopOf="@id/btcrea_rusuario" />

    <Button
        android:id="@+id/btcrea_rusuario"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/blue_600"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/editar_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lb_foto" />

</androidx.constraintlayout.widget.ConstraintLayout>
