<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <CheckBox
        android:id="@+id/check_delete"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/tv_foto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_foto" />


            <TextView
                android:id="@+id/lb_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_nombre_completo"
                android:layout_marginStart="10dp"
                android:visibility="gone"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_usuario" />

            <TextView
                android:id="@+id/tv_nombre_apellidos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lb_nombre"
                app:layout_constraintTop_toTopOf="@id/lb_nombre" />

            <TextView
                android:id="@+id/lb_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_fecha_nacimiento"
                android:layout_marginStart="10dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lb_nombre" />

            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lb_fecha"
                app:layout_constraintTop_toBottomOf="@id/tv_nombre_apellidos" />

            <TextView
                android:id="@+id/lb_tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_tipo_user"
                android:layout_marginStart="10dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lb_fecha" />


            <TextView
                android:id="@+id/tv_tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lb_tipo"
                app:layout_constraintTop_toBottomOf="@id/tv_fecha" />

            <TextView
                android:id="@+id/lb_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_correo"
                android:layout_marginStart="10dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lb_tipo" />

            <TextView
                android:id="@+id/tv_correo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/lb_correo"
                app:layout_constraintTop_toBottomOf="@id/tv_tipo" />
            <TextView
                android:id="@+id/label_telefono"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_telf"
                android:layout_marginStart="10dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lb_correo" />

            <TextView
                android:id="@+id/tv_telefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorPrimary"
                app:layout_constraintStart_toEndOf="@id/label_telefono"
                app:layout_constraintTop_toBottomOf="@id/tv_correo"
                app:layout_constraintEnd_toEndOf="parent"

                />

            <TextView
                android:id="@+id/lb_fecha_baja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lb_fecha_baja"
                android:layout_marginStart="10dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_telefono"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/tv_fecha_baja"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@id/lb_fecha_baja"
                app:layout_constraintTop_toBottomOf="@id/tv_telefono"
                app:layout_constraintEnd_toEndOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>